assets/css/bootstrap-shims.css
/**
 * Bootstrap Shims
 *
 * These are temporary styles intended to bridge the gap of conversion
 * from bootstrap to a pure-tailwind style approach. These should only
 * be tweaked or utilzed to fix existing code but should not be relied
 * upon for forward development.
 **/
@import './bs/accordion';
@import './bs/modal';
@import './bs/nav-tabs';
@import './bs/dropdown';
@import './bs/offcanvas';
@import './bs/spinner';
@import './bs/switch';
@import './bs/popover';
@import './bs/tooltip';

.btn {
  @apply px-3 py-2 rounded-sm cursor-pointer;
}

.btn-xs {
  @apply px-1.5 py-1 text-xs;
}
.btn-sm {
  @apply px-2 py-1 text-sm;
}
.btn-md {
  @apply px-3 py-2;
}
.btn-lg {
  @apply px-4 py-2 text-lg;
}
.btn-xl {
  @apply px-6 py-2 text-xl;
}
.btn-block {
  @apply w-full inline-block text-center;
}

.btn-primary {
  @apply text-white hover:text-white bg-blue-500 hover:bg-blue-600;
}
.btn-secondary {
  @apply text-white hover:text-white bg-gray-500 hover:bg-gray-600;
}
.btn-success {
  @apply text-white hover:text-white bg-green-500 hover:bg-green-600;
}
.btn-danger {
  @apply text-white hover:text-white bg-red-500 hover:bg-red-600;
}
.btn-warning {
  @apply text-white hover:text-white bg-yellow-500 hover:bg-yellow-600;
}
.btn-info {
  @apply text-white hover:text-white bg-blue-400 hover:bg-blue-500;
}
.btn-light {
  @apply text-gray-800 dark:text-white hover:text-gray-800 dark:hover:text-white bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-500;
}
.btn-dark {
  @apply text-white hover:text-white bg-gray-700 hover:bg-gray-900;
}
.btn-outline-primary {
  @apply text-blue-600 border border-solid border-blue-600 hover:bg-blue-600 hover:text-white;
}
.btn-outline-secondary {
  @apply text-gray-600 border border-solid border-gray-600 hover:bg-gray-600 hover:text-white;
}
.btn-outline-success {
  @apply text-green-600  border border-solid border-green-600 hover:bg-green-600 hover:text-white;
}
.btn-outline-danger {
  @apply text-red-600 border border-solid border-red-600 hover:bg-red-600 hover:text-white;
}
.btn-outline-warning {
  @apply text-yellow-600 border border-solid border-yellow-600 hover:bg-yellow-600 hover:text-white;
}
.btn-outline-info {
  @apply text-blue-400 border border-solid border-blue-400 hover:bg-blue-400 hover:text-white;
}
.btn-outline-light {
  @apply text-gray-500 border border-solid border-gray-600 hover:bg-gray-100 hover:text-gray-500;
}
.btn-outline-dark {
  @apply text-gray-800 py-2 px-6 border border-solid border-gray-800 hover:bg-gray-800 hover:text-white;
}

.btn-link {
  @apply text-blue-500 hover:underline hover:text-blue-600;
}

.btn-link.text-danger {
  @apply hover:text-red-600;
}

.btn[disabled],
.btn.disabled {
  @apply text-gray-400 dark:text-gray-500  no-underline hover:no-underline cursor-default hover:bg-inherit;
}

.btn-outline-primary[disabled],
.btn-outline-primary.disabled,
.btn-outline-secondary[disabled],
.btn-outline-secondary.disabled,
.btn-outline-success[disabled],
.btn-outline-success.disabled,
.btn-outline-danger[disabled],
.btn-outline-danger.disabled,
.btn-outline-warning[disabled],
.btn-outline-warning.disabled,
.btn-outline-info[disabled],
.btn-outline-info.disabled,
.btn-outline-light[disabled],
.btn-outline-light.disabled,
.btn-outline-dark[disabled] {
  @apply !border-gray-400;
}

.btn-primary[disabled],
.btn-secondary[disabled],
.btn-success[disabled],
.btn-danger[disabled],
.btn-warning[disabled],
.btn-info[disabled],
.btn-light[disabled],
.btn-dark[disabled] {
  @apply text-gray-400 bg-gray-200 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-700 cursor-default;
}

.container {
  @apply mx-auto;
}

.d-flex {
  @apply flex;
}

.flex-grow-1 {
  @apply grow;
}

.flex-column {
  @apply flex-col;
}

.dropdown {
  @apply relative;
}

.dropdown .dropdown-header {
  @apply text-gray-500
            font-semibold
            text-sm
            py-2
            px-4
            block
            w-full
            whitespace-nowrap
            bg-transparent;
}

.dropdown hr.dropdown-divider {
  @apply h-0 my-2 border border-solid border-t-0 border-gray-700 opacity-25;
}

.dropdown-toggle {
  @apply flex items-center whitespace-nowrap;
}

.dropdown-menu {
  @apply min-w-max
            absolute
            hidden
            bg-white
            dark:bg-gray-900
            text-base
            z-50
            float-left
            p-2
            list-none
            text-left
            rounded-lg
            shadow-lg
            mt-1
            m-0
            bg-clip-padding
            border-none;
}

h6.dropdown-item {
  @apply text-gray-500
              font-semibold
              text-sm
              py-2
              px-4
              block
              w-full
              whitespace-nowrap
              bg-transparent;
}

.dropdown-item {
  @apply text-sm
            py-2
            px-4
            font-normal
            block
            w-full
            whitespace-nowrap
            bg-transparent
            text-gray-800
            dark:text-white
            hover:bg-gray-100
            dark:hover:bg-gray-800;
}

a.dropdown-item,
.dropdown-item a {
  @apply no-underline text-gray-700 dark:text-white;
}

.nav nav-tabs {
  @apply flex flex-col md:flex-row flex-wrap list-none border-b-0 pl-0 mb-4;
}

.nav-item {
  @apply inline-block;
}

.nav-link {
  @apply block
      font-medium
      text-sm
      leading-tight
      uppercase
      border-x-0 border-t-0 border-b-2 border-transparent
      px-6
      py-3
      hover:border-transparent hover:bg-gray-100 dark:hover:bg-gray-700
      focus:border-transparent;
}

/* remove underline from links in dropdown menus and tabs */
a.nav-link {
  @apply hover:no-underline;
}

.form-group {
  @apply mb-4;
}

.form-control {
  @apply block;
}

.form-group .form-control,
.form-label-group .form-control,
input.form-control,
.input-group input.form-control,
.input-group select,
select.custom-select,
select.form-control {
  @apply border py-1 px-1.5 border-neutral-300 rounded w-full disabled:bg-neutral-100 disabled:text-neutral-600 dark:bg-neutral-800 dark:border-neutral-700;
}

input.form-control-sm,
.input-group input.form-control-sm {
  @apply p-0 text-sm rounded-sm;
}

.btn-group button.btn {
  @apply border-0;
}

.btn-group.btn-group-toggle .btn {
  @apply rounded-none;
}

.btn-group.btn-group-toggle .btn:first-of-type {
  @apply rounded-l;
}

.btn-group.btn-group-toggle .btn:last-of-type {
  @apply rounded-r;
}

.form-switch input[type='checkbox'] {
  @apply bg-contain;
}

.form-group input[type='file'] {
  @apply border border-neutral-300 p-1 rounded;
}

.input-group {
  @apply flex flex-row items-stretch;
}

.input-group .form-control {
  @apply block;
}

.input-group-append {
  @apply flex items-stretch rounded-tr-none rounded-br-none rounded text-neutral-600  border-0;
}

.input-group-append button {
  @apply rounded-none border-r-0 border-neutral-300 last:border last:rounded-tr-md last:rounded-br-md whitespace-nowrap;
}

.text-success {
  @apply text-green-500;
}
.text-danger {
  @apply text-red-500;
}
.text-warning {
  @apply text-yellow-500;
}

.list-style-none {
  list-style: none;
}

.pagination {
  @apply flex list-style-none gap-1;
}

.page-item .page-link {
  @apply relative block py-1.5 px-3 rounded border-0 bg-transparent outline-none transition-all duration-300 text-body-color dark:text-body-color-dark no-underline cursor-pointer;
}

.page-item:not(.disabled):not(.active) .page-link {
  @apply hover:text-gray-800 hover:bg-gray-200 focus:shadow-none;
}

.page-item.disabled .page-link {
  @apply cursor-default hover:text-inherit;
}

.page-item.active .page-link {
  @apply bg-blue-500 text-white hover:bg-blue-500 hover:text-white;
}

.page-item.disabled .page-link {
  @apply cursor-default bg-transparent text-gray-400 hover:text-gray-400;
}

.alert {
  @apply rounded-lg py-5 px-6 mb-4 text-base;
}

.alert-primary {
  @apply bg-blue-100 text-blue-700;
}

.alert-secondary {
  @apply bg-gray-100 text-gray-700;
}

.alert-success {
  @apply bg-green-100 text-green-700;
}

.alert-danger {
  @apply bg-red-100 text-red-700;
}

.alert-warning {
  @apply bg-yellow-100 text-yellow-700;
}

.alert-info {
  @apply bg-blue-50 text-blue-700;
}

.alert-light {
  @apply bg-gray-50 text-gray-500;
}

.alert-dark {
  @apply bg-gray-300 text-gray-800;
}

.badge {
  @apply inline-block py-1 px-2 leading-none text-center text-sm whitespace-nowrap align-baseline font-bold bg-gray-600 text-white rounded;
}

.badge-xs {
  @apply py-0.5 px-1 text-xs;
}
.badge-sm {
  @apply py-0.5 px-1 text-sm;
}
.badge-lg {
  @apply text-lg;
}
.badge-xl {
  @apply text-xl;
}

.badge-primary {
  @apply bg-blue-600 text-white;
}
.badge-secondary {
  @apply bg-gray-500 text-white;
}
.badge-success {
  @apply bg-green-500 text-white;
}
.badge-danger {
  @apply bg-red-600 text-white;
}
.badge-warning {
  @apply bg-yellow-500 text-white;
}
.badge-info {
  @apply bg-blue-400 text-white;
}
.badge-light {
  @apply bg-gray-200 text-white;
}
.badge-dark {
  @apply bg-gray-800 text-white;
}

.align-items-baseline {
  @apply items-baseline;
}

.card {
  @apply block p-6 rounded-lg shadow-lg bg-white dark:bg-[#3e3f44];
}

.card-body {
  @apply text-base;
}

.modal {
  @apply fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto;
}

.modal-dialog {
  @apply relative w-auto pointer-events-none;
}

.modal-content {
  @apply border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white dark:bg-body-dark bg-clip-padding rounded-md outline-none;
}

.modal-header {
  @apply flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md;
}

.modal-body {
  @apply relative p-4;
}

.modal-footer {
  @apply flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md;
}

.modal-dialog .modal-header .btn-close {
  @apply box-content w-4 h-4 p-1 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:opacity-75 hover:no-underline m-0;
}

.flex-fill {
  @apply flex-1;
}

.justify-content-start {
  @apply justify-start;
}
.justify-content-end {
  @apply justify-end;
}
.justify-content-center {
  @apply justify-center;
}
.justify-content-between {
  @apply justify-between;
}
.justify-content-around {
  @apply justify-around;
}
.justify-content-evenly {
  @apply justify-evenly;
}

.align-items-start {
  @apply items-start;
}
.align-items-end {
  @apply items-end;
}
.align-items-center {
  @apply items-center;
}
.align-items-baseline {
  @apply items-baseline;
}
.align-items-stretch {
  @apply items-stretch;
}

.loader.spinner-border.text-primary {
  @apply animate-spin inline-block w-8 h-8 border-4 rounded-full text-blue-600;
}

.sr-only {
  @apply hidden;
}

table {
  @apply min-w-full border dark:border-gray-600 dark:text-gray-300;
}
table thead th {
  @apply border-b border-r p-2 bg-gray-100 font-semibold dark:bg-gray-600 dark:border-gray-600;
}
table tr {
  @apply border-b dark:border-gray-600;
}
table td {
  @apply border-r p-2 dark:border-gray-600;
}

table.table-striped tbody tr:nth-child(even) {
  @apply bg-gray-100 dark:bg-gray-600;
}

table.table-striped tbody tr:nth-child(odd) {
  @apply bg-white dark:bg-delivery-body-dark;
}

.d-none {
  @apply hidden;
}

.fade {
  transition: opacity 0.15s linear;
}
@media (prefers-reduced-motion: reduce) {
  .fade {
    transition: none;
  }
}
.fade:not(.show) {
  opacity: 0;
}

.collapse.show {
  visibility: visible;
}

.collapse:not(.show) {
  display: none;
}

.collapsing {
  height: 0;
  overflow: hidden;
  transition: height 0.35s ease;
}
@media (prefers-reduced-motion: reduce) {
  .collapsing {
    transition: none;
  }
}
.collapsing.collapse-horizontal {
  width: 0;
  height: auto;
  transition: width 0.35s ease;
}
@media (prefers-reduced-motion: reduce) {
  .collapsing.collapse-horizontal {
    transition: none;
  }
}

